# true_asset_alluse

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
deployment/: PRE_DEPLOYMENT_CHECKLIST.md  README.md  README_v2.0.md
deployment/ci-cd/: github-actions.yml
deployment/docker/: Dockerfile.main
deployment/scripts/: deploy.sh  health-check.sh
deployment/terraform/: main.tf
docs/: ALL-USE-Constitution-v1.3(1).md  ALL-USE-Implementation-PRD-v3.0.md  ALL-USE-PRD-v0.1(1).md  ALL-USE-System-Overview-&-Story-v1.2(1).md  ALL-USE-System-Overview-&-Story-v2.0.md  ALL-USEImplementationProductRequirementsDocument(PRD).md  ALL-USETechnicalSpecifications&DevelopmentGuide.md  Advanced_AI_Augmented_Enhancements.md  LLM_System_Onboarding_Guide.md  LLM_System_Onboarding_Guide_v2.0_backup.md  LLM_System_Onboarding_Guide_v3.0.md  Strategic_System_Comparison_Analysis.md  WORKSTREAM_BREAKDOWN.md  WORKSTREAM_BREAKDOWN_v2.0.md
docs/WS12_Visualization_Intelligence/: WS12_Implementation_Details.md
docs/WS16_Enhanced_Conversational_AI/: WS16_Implementation_Details.md
docs/WS1_Rules_Engine/: WS1_Implementation_Details.md
docs/WS2_Protocol_Engine/: WS2_Implementation_Details.md
docs/WS3_Account_Management/: WS3_Implementation_Details.md
docs/WS4_Market_Data_Execution/: WS4_Implementation_Details.md
docs/WS5_Portfolio_Management/: WS5_Implementation_Details.md
docs/WS6_User_Interface/: WS6_Implementation_Details.md
docs/WS7_Natural_Language/: WS7_Implementation_Details.md
docs/WS8_ML_Intelligence/: WS8_Implementation_Details.md
docs/WS9_Market_Intelligence/: WS9_Implementation_Details.md
docs/api_reference/: api_reference.md  api_reference_v3.0.md
docs/architecture/: ALL-USE-Intelligent-System-Architecture-v2.0.md  ALL-USERules-BasedSystemArchitecture&DesignDocument.md
docs/compliance/: compliance_documentation.md
docs/deployment_guide/: deployment_guide.md
docs/system_architecture/: system_architecture.md  system_architecture_v1.0_backup.md
docs/user_manual/: user_manual.md  user_manual_v3.0.md
integration/health_monitoring/: system_monitor.py
integration/performance_benchmarks/: benchmark_suite.py
integration/system_orchestrator/: main_application.py
integration/testing_framework/: test_suite.py
local-deployment/: DEPLOYMENT_GUIDE.md  LOCAL_DEPLOYMENT_GUIDE.md  LOCAL_DEPLOYMENT_GUIDE_ENHANCED.md  QUICK_START_GUIDE.md  README.md  build.py  build_real.py  config_enhanced.py  create_database.py  deploy.py  fix_all_templates.py  fix_templates.py  health_check.py  integrated_app.py  local_config.py  local_main.py  main.py  main_enhanced.py  mock_services.py  quick_setup.sh  requirements.txt  requirements_enhanced.txt  requirements_minimal.txt  setup.sh  setup_macos.sh  setup_macos_enhanced.sh  start_server.sh  test_server.py
local-deployment/database/: true_asset_alluse.db
local-deployment/logs/: health_report_20250911_174739.json  health_report_20250911_174912.json
local-deployment/services/: databento_service.py  ibkr_service.py  news_service.py  openai_service.py
local-deployment/templates/: analytics.html  dashboard.html  index.html  index_enhanced.html  landing.html  portfolio.html
requirements/: ai.txt  base.txt  development.txt  production.txt
src/: __init__.py  integrated_web_app.py  main.py
tests/: __init__.py  conftest.py  test_main.py
(+54 files in other folders)
